modules/security_group/main.tf
# ------------------------------
# Security Group
# ------------------------------
resource "aws_security_group" "security-group" {
  name        = "${var.app_name}-${var.environment}-security-group"
  description = "Security group for ${var.app_name}-${var.environment}"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.allowed_ip]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.app_name}-${var.environment}-security-group"
  }
}
